--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         {{ more_text | safe }}
         <!-- <a>ps: 如果长时间无响应，可能是你的网络问题，或服务器无法响应等</a> -->
         <div style="height: 40px;"></div>
-        <a>你可以通过这个页面知晓 {{ user }} 的在线状态。
+        <a>你可以通过这个页面视奸 {{ user }} 。
             <br>
             <a href="{{ repo }}" target="_blank" style="color: rgb(0, 255, 0);">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="vertical-align: middle; width: 1em;">
